--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,24 @@
     	<artifactId>gson</artifactId>
     	<version>2.4</version>
     </dependency>
-  </dependencies>
+</dependencies>
+<build>
+<plugins>
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-shade-plugin</artifactId>
+<executions>
+<execution>
+<phase>package</phase>
+<goals>
+<goal>shade</goal>
+</goals>
+</execution>
+</executions>
+<configuration>
+<finalName>uber-${artifactId}-${version}</finalName>
+</configuration>
+</plugin>
+</plugins>
+</build>
 </project>
